--- a/release/logging-filebeat.yaml
+++ b/release/logging-filebeat.yaml
@@ -53,11 +53,10 @@ _config:
       command:
       - /opt/log-pilot/bin/log-pilot
       args:
-      - "--path.template=filebeat.tpl"
-      - "--path.filebeat-home=/opt/filebeat"
-      - "--logLevel=info"
-      - "-e"
-      - "--namespace.blacklist=default,kube-system"
+      - --path.template=filebeat.tpl
+      - --path.filebeat-home=/opt/filebeat
+      - --logLevel=debug
+      - -e
       env: 
       - name: OUTPUT_CONFIG
         from:
