--- a/release/logging-filebeat.yaml
+++ b/release/logging-filebeat.yaml
@@ -36,7 +36,7 @@ _config:
         readonly: true
         propagation: HostToContainer
       - name: varlibdocker
-        path: /var/lib/docker/containers
+        path: /var/lib/docker
         readonly: true
         propagation: HostToContainer
       - name: varlog
@@ -74,13 +74,12 @@ _config:
         subpath: filebeat
         propagation: HostToContainer
       - name: varlibdocker
-        path: /var/lib/docker/containers
+        path: /var/lib/docker
         readonly: true
         propagation: HostToContainer
       - name: docker-sock
         path: /var/run/docker.sock
         readonly: true
-        propagation: HostToContainer
     type: DaemonSet
     volumes:
     - name: varlog
@@ -97,7 +96,7 @@ _config:
       type: HostPath
     - name: varlibdocker
       source:
-        path: /var/lib/docker/containers
+        path: /var/lib/docker
       type: HostPath
     - name: output-config
       source:
